# wkspace

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/superpowers/plans/: 2026-05-04-tui-m1-skeleton.md
docs/superpowers/specs/: 2026-05-04-tui-redesign-design.md
scripts/: dev-install.sh
src/: config.rs  context.rs  error.rs  git.rs  hooks.rs  lib.rs  main.rs  names.rs  scripts.rs
src/commands/: from.rs  init.rs  list.rs  mod.rs  new.rs  open.rs  rm.rs  setup.rs  teardown.rs
src/tui/: launcher.rs  mod.rs  tmux.rs
src/tui/controller/: data.rs  events.rs  mod.rs  view.rs
tests/: cmd_from_test.rs  cmd_init_test.rs  cmd_list_test.rs  cmd_new_test.rs  cmd_open_test.rs  cmd_rm_test.rs  cmd_setup_test.rs  config_test.rs  git_test.rs  git_worktree_test.rs  hooks_test.rs  integration_test.rs  scripts_test.rs  tui_events_test.rs  tui_launcher_test.rs  tui_tmux_test.rs  tui_view_test.rs
