[package]
name = "wkspace"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to manage Git worktrees with lifecycle scripts"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
toml = "0.8"

[profile.release]
strip = true
lto = "thin"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
